admission-webhook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: validate-hc
  namespace: admission-webhook
spec:
  selector:
    app: validate-probes-webhook
  ports:
  - name: http
    port: 443
    targetPort: 8443
  type: ClusterIP
