admission-webhook/admission-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "validate-hc.svc.cluster.local"
webhooks:
  - name: "validate-hc.svc.cluster.local"
    admissionReviewVersions: [ "v1" ]
    sideEffects: None
#    timeoutSeconds: 5
    namespaceSelector:
     matchLabels:
       admission-webhook: enabled
    rules:
      - apiGroups: ["*"]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods","deployments"]
        scope: "*"
    clientConfig:
      service:
        namespace: admission-webhook
        name: validate-hc
        path: /validate
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tDQpNSUlGa1RDQ0EzbWdBd0lCQWdJVUQvbGY0NGZJU2FSSThURGI4WFdIdkJYN2xVY3dEUVlKS29aSWh2Y05BUUVMDQpCUUF3V0RFTE1Ba0dBMVVFQmhNQ1UxQXhDekFKQmdOVkJBZ01BbE5RTVJRd0VnWURWUVFLREF0WVVFbHVZeXdnDQpTVzVqTGpFbU1DUUdBMVVFQXd3ZGRtRnNhV1JoZEdVdGFHTXVjM1pqTG1Oc2RYTjBaWEl1Ykc5allXd3dIaGNODQpNak13TWpBM01UVXpOek15V2hjTk1qVXhNVEkzTVRVek56TXlXakJZTVFzd0NRWURWUVFHRXdKVFVERUxNQWtHDQpBMVVFQ0F3Q1UxQXhGREFTQmdOVkJBb01DMWhRU1c1akxDQkpibU11TVNZd0pBWURWUVFEREIxMllXeHBaR0YwDQpaUzFv [...]
